--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/spaghettibolognese.html">Spaghetti Bolognese</a>
+    <ul>
+        <li> <a href="recipes/spaghettibolognese.html">Spaghetti Bolognese</a> </li>
+        <li> <a href="recipes/spaghettiallevongole.html">Spaghetti alle Vongole</a> </li>
+        <li> <a href="recipes/spaghetticarbonara.html">Spaghetti Carbonara</a> </li>
+    </ul>
+    
 </body>
 </html>
