--- a/recipes/spaghettibolognese.html
+++ b/recipes/spaghettibolognese.html
@@ -8,6 +8,48 @@
 </head>
 <body>
     <h1>Spaghetti Bolognese</h1>
-    <img src="img/spaghettibolognese.jpg" alt="Spaghetti Bolognese">
+    <img src="../img/spaghettibolognese.jpg" alt="Spaghetti Bolognese">
+    <h1> Description </h1>
+        <p>Everyone needs a basic spaghetti bolognese recipe 
+            that still tastes great, no matter how simple. 
+            Get that depth of flavour by cooking the sauce 
+            very gently until it’s super rich. 
+            This spag bol is designed to be a low cost recipe. </p>
+        
+    <h1> Ingredients</h1>
+    <ol>
+        <li>2 tbsp olive oil</li>
+        <li>1 onion, diced</li>
+        <li>400g beef mince</li>
+        <li>2 garlic cloves, minced</li>
+        <li>100g carrot, grated</li>
+        <li>2x 400g tins of chopped tomato</li>
+        <li>400ml stock (ideally beef)</li>
+        <li>400g dried spaghetti</li>
+        <li>salt and pepper</li>
+    </ol>
+    <h1>Steps</h1>
+    <ol>
+        <li>Heat a large saucepan over a medium heat. Add a tablespoon of olive oil and 
+            once hot add the beef mince and a pinch of salt and pepper. 
+            Cook the mince until well browned over a medium-high heat (be 
+            careful not to burn the mince. It just needs to be a dark brown colour). 
+            Once browned, transfer the mince to a bowl and set aside.</li>
+        <li>
+            Add another tablespoon of oil to the saucepan you browned the mince in and 
+            turn the heat to medium. Add the onions and a pinch of salt and fry gently 
+            for 5-6 minutes, or until softened and translucent. Add the garlic and cook for
+             another 2 minutes. Add the grated carrot then pour the mince and any juices in 
+             the bowl back into the saucepan.</li>
+        <li>
+            Add the tomatoes to the pan and stir well to mix. Pour in the stock, bring to a 
+            simmer and then reduce the temperature to simmer gently for 45 minutes, or until 
+            the sauce is thick and rich. Taste and adjust the seasoning as necessary.</li>
+        <li>
+            When ready to cook the spaghetti, heat a large saucepan of water and add a pinch 
+            of salt. Cook according to the packet instructions. Once the spaghetti is cooked 
+            through, drain and add to the pan with the bolognese sauce. Mix well and serve.</li>
+
+    </ol>
 </body>
 </html></h1>
