--- a/recipes/spaghetticarbonara.html
+++ b/recipes/spaghetticarbonara.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Spaghetti Bolognese</h1>
+    <h1>Spaghetti Carbonara</h1>
     <img src="../img/spaghetticarbonara.jpg" alt="Spaghetti Carbonara">
     <h1> Description </h1>
         <p>Discover how to make superb spaghetti carbonara. 
